# aprofs

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.sh
.github/workflows/: documentation.yml  test.yml
Tutorial/: index.html
api/: index.html
docs/: Tutorial.ipynb  api.md  guide.md  index.md  reference.md
guide/: index.html
reference/: index.html
search/: search_index.json
src/aprofs/: __init__.py  code.py  models.py  utils.py
tests/: conftest.py  test_code.py
tutorials/: index.html
